--- a/.github/workflows/publish-postgres-image.yml
+++ b/.github/workflows/publish-postgres-image.yml
@@ -18,6 +18,13 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v4
 
+            - name: Extract PostgreSQL version
+              id: extract-version
+              run: |
+                POSTGRES_VERSION=$(grep -oP '(?<=FROM postgres:)\d+' postgres/dockerfile)
+                echo "POSTGRES_VERSION=$POSTGRES_VERSION" >> $GITHUB_ENV
+
+
             - name: Log in to the Container registry
               uses: docker/login-action@v2
               with:
@@ -30,12 +37,14 @@ jobs:
               uses: docker/metadata-action@v3
               with:
                 images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+                tags: |
+                  ${{ env.POSTGRES_VERSION }}
 
             - name: Build and push Docker image
               id: push
               uses: docker/build-push-action@v3
               with:
-                context: .
+                context: postgres/dockerfile
                 push: true
                 tags: ${{ steps.meta.outputs.tags }}
                 labels: ${{ steps.meta.outputs.labels }}
