--- a/.github/workflows/publish-postgres-image.yml
+++ b/.github/workflows/publish-postgres-image.yml
@@ -44,7 +44,7 @@ jobs:
               id: push
               uses: docker/build-push-action@v3
               with:
-                context: postgres/dockerfile
+                context: postgres/
                 push: true
                 tags: ${{ steps.meta.outputs.tags }}
                 labels: ${{ steps.meta.outputs.labels }}
