--- a/.github/workflows/publish-postgres-image.yml
+++ b/.github/workflows/publish-postgres-image.yml
@@ -8,7 +8,7 @@ on:
 
 env:
     REGISTRY: ghcr.io
-    IMAGE_NAME: waec-t/postgres
+    IMAGE_NAME: 3-1-research-project/postgres
 
 jobs:
     build-and-publish-image:
@@ -18,31 +18,33 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v4
 
+            - name: Extract PostgreSQL version
+              id: extract-version
+              run: |
+                POSTGRES_VERSION=$(grep -oP '(?<=FROM postgres:)\d+' postgres/dockerfile)
+                echo "POSTGRES_VERSION=$POSTGRES_VERSION" >> $GITHUB_ENV
+
+
             - name: Log in to the Container registry
               uses: docker/login-action@v2
               with:
                 registry: ${{ env.REGISTRY }}
                 username: ${{ github.actor }}
-                password: ${{ secrets.GITHUB_TOKEN }}
+                password: ${{ secrets.PAT }}
 
             - name: Extract metadata (tags, labels) for Docker
               id: meta
               uses: docker/metadata-action@v3
               with:
                 images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+                tags: |
+                  ${{ env.POSTGRES_VERSION }}
 
             - name: Build and push Docker image
               id: push
               uses: docker/build-push-action@v3
               with:
-                context: .
+                context: postgres/
                 push: true
                 tags: ${{ steps.meta.outputs.tags }}
                 labels: ${{ steps.meta.outputs.labels }}
-
-            - name: Generate artifact attestation
-              uses: actions/attest-build-provenance@v2
-              with:
-                subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
-                subject-digest: ${{ steps.push.outputs.digest }}
-                push-to-registry: true
