--- a/.github/workflows/publish-postgres-image.yml
+++ b/.github/workflows/publish-postgres-image.yml
@@ -18,13 +18,15 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v4
 
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
+
             - name: Extract PostgreSQL version
               id: extract-version
               run: |
                 POSTGRES_VERSION=$(grep -oP '(?<=FROM postgres:)\d+' postgres/dockerfile)
                 echo "POSTGRES_VERSION=$POSTGRES_VERSION" >> $GITHUB_ENV
-
-
+                ag
             - name: Log in to the Container registry
               uses: docker/login-action@v2
               with:
